--- a/ProjectManager/ProjectManager/ProjectManager.csproj
+++ b/ProjectManager/ProjectManager/ProjectManager.csproj
@@ -25,4 +25,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\Services\src\CommonDataModels\CommonDataModels.csproj" />
+  </ItemGroup>
+
 </Project>
