--- a/ProjectManager/ProjectManager/appsettings.Development.json
+++ b/ProjectManager/ProjectManager/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ProjectManager-41A3E716-EA39-469D-8B96-838A74683FDA;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
