Added client submodule and adjusted file paths

--- a/src/ProjectManager/ProjectManager.csproj
+++ b/src/ProjectManager/ProjectManager.csproj
@@ -27,7 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Services\src\CommonDataModels\CommonDataModels.csproj" />
+    <ProjectReference Include="..\submodules\ServicesClient\src\CommonDataModels\CommonDataModels.csproj" />
   </ItemGroup>
 
 </Project>
