--- a/.github/workflows/projectmanager-docker-publish.yml
+++ b/.github/workflows/projectmanager-docker-publish.yml
@@ -16,7 +16,7 @@ on:
   # Run tests for any PRs.
   pull_request:
     paths:
-      - 'ProjectManager/**'
+      - 'src/**'
 
 env:
   # TODO: Change variable to your image's name.
@@ -37,7 +37,7 @@ jobs:
             docker-compose --file docker-compose.test.yml build
             docker-compose --file docker-compose.test.yml run sut
           else
-            docker build ProjectManager --file ProjectManager/ProjectManager/Dockerfile --build-arg GITHUBSECRET=${{ secrets.GITHUB_TOKEN }}
+            docker build src --file src/ProjectManager/Dockerfile --build-arg GITHUBSECRET=${{ secrets.GITHUB_TOKEN }}
           fi
 
   # Push image to GitHub Packages.
@@ -53,7 +53,7 @@ jobs:
       - uses: actions/checkout@v2   
 
       - name: Build image
-        run: docker build ProjectManager --file src/Projects/Dockerfile --tag $IMAGE_NAME --build-arg GITHUBSECRET=${{ secrets.GITHUB_TOKEN }}
+        run: docker build src --file src/ProjectManager/Dockerfile --tag $IMAGE_NAME --build-arg GITHUBSECRET=${{ secrets.GITHUB_TOKEN }}
 
       - name: Log into GitHub Container Registry
       # TODO: Create a PAT with `read:packages` and `write:packages` scopes and save it as an Actions secret `CR_PAT`
