--- a/.github/workflows/projectmanagermigration-docker-publish.yml
+++ b/.github/workflows/projectmanagermigration-docker-publish.yml
@@ -1,4 +1,4 @@
-name: Project Manager Docker Build
+name: Project Manager Migration Docker Build
 
 on:
   push:
@@ -20,7 +20,7 @@ on:
 
 env:
   # TODO: Change variable to your image's name.
-  IMAGE_NAME: projectmanager
+  IMAGE_NAME: projectmanagermigration
 
 jobs:
   # Run tests.
@@ -39,7 +39,7 @@ jobs:
             docker-compose --file docker-compose.test.yml build
             docker-compose --file docker-compose.test.yml run sut
           else
-            docker build src --file src/ProjectManager/Dockerfile --build-arg GITHUBSECRET=${{ secrets.GITHUB_TOKEN }}
+            docker build src --file src/ProjectManager/MigrateDockerfile --build-arg GITHUBSECRET=${{ secrets.GITHUB_TOKEN }}
           fi
 
   # Push image to GitHub Packages.
@@ -55,7 +55,7 @@ jobs:
       - uses: actions/checkout@v2   
 
       - name: Build image
-        run: docker build src --file src/ProjectManager/Dockerfile --tag $IMAGE_NAME --build-arg GITHUBSECRET=${{ secrets.GITHUB_TOKEN }}
+        run: docker build src --file src/ProjectManager/MigrateDockerfile --tag $IMAGE_NAME --build-arg GITHUBSECRET=${{ secrets.GITHUB_TOKEN }}
 
       - name: Log into GitHub Container Registry
       # TODO: Create a PAT with `read:packages` and `write:packages` scopes and save it as an Actions secret `CR_PAT`
