--- a/.github/workflows/projectmanagermigration-docker-publish.yml
+++ b/.github/workflows/projectmanagermigration-docker-publish.yml
@@ -52,7 +52,9 @@ jobs:
     if: github.event_name == 'push'
 
     steps:
-      - uses: actions/checkout@v2   
+      - uses: actions/checkout@v3
+        with:
+          submodules: 'recursive'  
 
       - name: Build image
         run: docker build src --file src/ProjectManager/MigrateDockerfile --tag $IMAGE_NAME --build-arg GITHUBSECRET=${{ secrets.GITHUB_TOKEN }}
