Moved database out of pm chart

--- a/deploy/chart/templates/projectmanager.yaml
+++ b/deploy/chart/templates/projectmanager.yaml
@@ -20,7 +20,7 @@ spec:
         - containerPort: 80
         env:
         - name: ASPNETCORE_ConnectionStrings__DefaultConnection
-          value: "Host=projectmanager-postgresql;Database=aspnet-ProjectManager;Username={{ .Values.global.postgresql.auth.username }};Password={{ .Values.global.postgresql.auth.password }}"
+          value: "Host={{ .Values.projectmanager.databaseaddress }};Database={{ .Values.global.postgresql.auth.database }};Username={{ .Values.global.postgresql.auth.username }};Password={{ .Values.global.postgresql.auth.password }}"
 ---
 apiVersion: v1
 kind: Service
