Moved some dbcontext files out to a shared project to avoid circle dependency while also including in the build

--- a/src/ProjectManager/ProjectManager.csproj
+++ b/src/ProjectManager/ProjectManager.csproj
@@ -27,6 +27,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PostgresqlMigrations\PostgresqlMigrations.csproj" />
+    <ProjectReference Include="..\ProjectManagerContext\ProjectManagerContext.csproj" />
     <ProjectReference Include="..\submodules\ServicesClient\src\CommonDataModels\CommonDataModels.csproj" />
   </ItemGroup>
 
