--- a/src/PostgresqlMigrations/PostgresqlMigrations.csproj
+++ b/src/PostgresqlMigrations/PostgresqlMigrations.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ProjectManager\ProjectManager.csproj" />
+    <ProjectReference Include="..\ProjectManagerContext\ProjectManagerContext.csproj" />
   </ItemGroup>
 
 </Project>
