--- a/src/ProjectManager/ProjectManager.csproj
+++ b/src/ProjectManager/ProjectManager.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Blazorise.Bootstrap5" Version="1.0.5" />
+    <PackageReference Include="Blazorise.Charts" Version="1.0.6" />
     <PackageReference Include="Blazorise.Components" Version="1.0.5" />
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.0.5" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0-preview4" />
