--- a/src/ProjectDocuments/ProjectDocuments.csproj
+++ b/src/ProjectDocuments/ProjectDocuments.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazorise.RichTextEdit" Version="1.1.2" />
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.18.0" />
   </ItemGroup>
 
