--- a/src/PostgresqlMigrations/PostgresqlMigrations.csproj
+++ b/src/PostgresqlMigrations/PostgresqlMigrations.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	<BaseOutputPath>..\ProjectManager\bin\</BaseOutputPath>
+	<Configurations>Debug;Release;RealseNative</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
