--- a/src/NativeBindings/NativeBindings.csproj
+++ b/src/NativeBindings/NativeBindings.csproj
@@ -5,7 +5,7 @@
 	<RuntimeIdentifier>win-x64</RuntimeIdentifier>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Configurations>Debug;Release;RealseNative</Configurations>
+    <Configurations>Debug;Release;</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
