--- a/src/ProjectManager.Wpf/ProjectManager.Wpf.csproj
+++ b/src/ProjectManager.Wpf/ProjectManager.Wpf.csproj
@@ -6,7 +6,7 @@
 	<RuntimeIdentifier>win-x64</RuntimeIdentifier>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
-    <Configurations>Debug;Release;RealseNative</Configurations>
+    <Configurations>Debug;Release;</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
