--- a/src/ProjectDocuments/ProjectDocuments.csproj
+++ b/src/ProjectDocuments/ProjectDocuments.csproj
@@ -1,8 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Configurations>Debug;Release;</Configurations>
+	  <LangVersion>8.0</LangVersion>
+	  <Nullable>Enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
