--- a/src/ProjectManager/ProjectManager.csproj
+++ b/src/ProjectManager/ProjectManager.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Blazorise.Charts" Version="1.1.5" />
     <PackageReference Include="Blazorise.Components" Version="1.1.5" />
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.1.5" />
+    <PackageReference Include="CommunityToolkit.Diagnostics" Version="8.1.0" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
     <PackageReference Include="Darnton.Blazor.Leaflet" Version="0.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.WsFederation" Version="7.0.2" />
