--- a/deploy/chart/templates/projectmanager.yaml
+++ b/deploy/chart/templates/projectmanager.yaml
@@ -59,7 +59,7 @@ spec:
 apiVersion: gateway.networking.k8s.io/v1beta1
 kind: HTTPRoute
 metadata:
-  name: projectroute
+  name: {{ .Release.Name }}-projectmanager-route
   namespace: default
 spec:
   parentRefs:
