--- a/src/ProjectManager/appsettings.json
+++ b/src/ProjectManager/appsettings.json
@@ -1,5 +1,7 @@
 {
   "Logging": {
+    "ApiKey": "QXBj3DAsEJ3alv77y16F",
+    "IngestUrl": "http://seqingest.services.cedarbarn.local:5341",
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
