--- a/deploy/chart/templates/projectmanagermigration.yaml
+++ b/deploy/chart/templates/projectmanagermigration.yaml
@@ -7,7 +7,7 @@ metadata:
     # job is considered part of the release.
     "helm.sh/hook": pre-install,pre-upgrade
     "helm.sh/hook-weight": "-1"
-    "helm.sh/hook-delete-policy": hook-succeeded,hook-failed
+    #"helm.sh/hook-delete-policy": hook-succeeded,hook-failed
 spec:  
   template:
     metadata:
