--- a/src/PostgresqlMigrations/PostgresqlMigrations.csproj
+++ b/src/PostgresqlMigrations/PostgresqlMigrations.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
+	  <RuntimeIdentifiers>win-x64;linux-x64</RuntimeIdentifiers>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	<BaseOutputPath>..\ProjectManager\bin\</BaseOutputPath>
